--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 		"start": "cross-env NODE_ENV=development SERVER=true webpack --watch",
 		"watch": "cross-env NODE_ENV=development webpack --watch",
 		"dev": "cross-env NODE_ENV=development webpack",
-		"prod": "cross-env NODE_ENV=production webpack",
+		"prod": "cross-env NODE_ENV=production webpack --mode production",
 		"build": "concurrently \"npm run prod\" \"npm run dev\""
 	},
 	"devDependencies": {
@@ -32,7 +32,7 @@
 		"postcss-preset-env": "^6.7.0",
 		"resolve-url-loader": "^3.1.1",
 		"sass": "^1.39.0",
-		"sass-loader": "^10",
+		"sass-loader": "^10.2.0",
 		"style-loader": "^1.3.0",
 		"svg-url-loader": "^7.1.1",
 		"tailwind-scrollbar": "^1.3.0",
@@ -40,20 +40,25 @@
 		"ts-loader": "^9.2.6",
 		"typescript": "^4.4.4",
 		"uglifyjs-webpack-plugin": "^2.2.0",
+		"vue-loader": "^15.9.8",
+		"vue-template-compiler": "^2.6.14",
 		"webpack": "^4.46.0",
 		"webpack-cli": "^3.3.12",
 		"webpack-dev-server": "^4.1.0"
 	},
 	"dependencies": {
 		"@tailwindcss/jit": "^0.1.18",
-		"alpinejs": "^3.4.2",
-		"eiows": "^3.7.2",
-		"express": "^4.17.1",
+		"axios": "^0.24.0",
+		"browserify": "^17.0.0",
+		"envify": "^4.1.0",
 		"postcss-custom-properties": "^9.1.1",
 		"postcss-import": "^12.0.1",
 		"postcss-nested": "^4.2.3",
+		"quill": "^1.3.6",
 		"regenerator": "^0.14.7",
-		"socket.io": "^4.3.1"
+		"vue": "^2.6.14",
+		"vue-emoji-picker": "^1.0.3",
+		"vue-quill-editor": "^3.0.6"
 	},
 	"browserslist": [
 		"> 1%",
