--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
 		"sass-loader": "^10.2.0",
 		"style-loader": "^1.3.0",
 		"svg-url-loader": "^7.1.1",
-		"tailwind-scrollbar": "^1.3.0",
+		"tailwind-scrollbar": "^1.3.1",
 		"tailwindcss": "^2.2.10",
 		"ts-loader": "^9.2.6",
 		"typescript": "^4.4.4",
@@ -51,9 +51,11 @@
 		"axios": "^0.24.0",
 		"browserify": "^17.0.0",
 		"envify": "^4.1.0",
+		"moment": "^2.29.1",
 		"postcss-custom-properties": "^9.1.1",
 		"postcss-import": "^12.0.1",
 		"postcss-nested": "^4.2.3",
+		"pusher-js": "^7.0.3",
 		"quill": "^1.3.6",
 		"regenerator": "^0.14.7",
 		"vue": "^2.6.14",
