--- a/package.json
+++ b/package.json
@@ -24,6 +24,11 @@
 		"cross-env": "^7.0.2",
 		"css-loader": "^3.6.0",
 		"cssnano": "^4.1.10",
+		"image-minimizer-webpack-plugin": "^2.2.0",
+		"imagemin-gifsicle": "^7.0.0",
+		"imagemin-jpegtran": "^7.0.0",
+		"imagemin-optipng": "^8.0.0",
+		"imagemin-svgo": "^10.0.0",
 		"imagemin-webpack-plugin": "^2.4.2",
 		"mini-css-extract-plugin": "^0.9.0",
 		"node-sass": "^6.0.1",
